# ForestFireSimulation

./: .gitignore  App.h  Backend.h  CMakeLists.txt  Forest.cpp  GUI.cpp  GUI.h  MeasurementsLog.cpp  MeasurementsLog.h  MetalBackend.mm  OpenMPBackend.cpp  README.md  main.cpp
.github/workflows/: release.yml
include/: Forest.h
src/app/: GUI.cpp
src/core/: GPUBackend.cpp  OpenCLBackend.cpp  OpenMPBackend.cpp
tests/: CMakeLists.txt  test_framework.h  test_simulation.cpp
